// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Linear/Time charts font color is white with a dark background color 1`] = `
Object {
  "background": "#010101",
  "chartJsConfig": Object {
    "data": Object {
      "datasets": Array [
        Object {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": Array [
            Object {
              "x": "20",
              "y": 11,
            },
            Object {
              "x": "19",
              "y": 12,
            },
            Object {
              "x": "18",
              "y": 13,
            },
            Object {
              "x": "17",
              "y": undefined,
            },
          ],
          "fill": false,
          "label": "10",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
      ],
      "labels": Array [
        "20",
        "19",
        "18",
        "17",
      ],
    },
    "options": Object {
      "animation": Object {
        "duration": 0,
      },
      "elements": Object {
        "line": Object {
          "fill": false,
        },
        "point": Object {
          "hitRadius": 15,
        },
      },
      "hover": Object {
        "animationDuration": 10,
      },
      "layout": Object {
        "padding": Object {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": Object {
        "labels": Object {
          "fontColor": "#FFFFFF",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": Object {
        "xAxes": Array [
          Object {
            "ticks": Object {
              "callback": [Function],
              "fontColor": "#FFFFFF",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
            "type": "linear",
          },
        ],
        "yAxes": Array [
          Object {
            "position": "left",
            "ticks": Object {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#FFFFFF",
            },
          },
        ],
      },
      "title": Object {
        "display": true,
        "fontColor": "#FFFFFF",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": Object {
        "callbacks": Object {
          "label": [Function],
          "title": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`Linear/Time charts snapshot test of chartJS configuration for date chart 1`] = `
Object {
  "background": "#FFFFFF",
  "chartJsConfig": Object {
    "data": Object {
      "datasets": Array [
        Object {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": Array [
            Object {
              "x": "1/19/1900",
              "y": 10,
            },
            Object {
              "x": "1/18/1900",
              "y": 11,
            },
            Object {
              "x": "1/17/1900",
              "y": 12,
            },
            Object {
              "x": "1/16/1900",
              "y": 13,
            },
          ],
          "fill": false,
          "label": "Series 1",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
      ],
      "labels": Array [
        "1/19/1900",
        "1/18/1900",
        "1/17/1900",
        "1/16/1900",
      ],
    },
    "options": Object {
      "animation": Object {
        "duration": 0,
      },
      "elements": Object {
        "line": Object {
          "fill": false,
        },
        "point": Object {
          "hitRadius": 15,
        },
      },
      "hover": Object {
        "animationDuration": 10,
      },
      "layout": Object {
        "padding": Object {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": Object {
        "labels": Object {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": Object {
        "xAxes": Array [
          Object {
            "ticks": Object {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "maxTicksLimit": 15,
              "minRotation": 15,
              "padding": 5,
            },
            "time": Object {
              "displayFormats": Object {
                "day": "M/D/YYYY",
              },
              "parser": "M/D/YYYY",
              "unit": "day",
            },
            "type": "time",
          },
        ],
        "yAxes": Array [
          Object {
            "position": "left",
            "ticks": Object {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": Object {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": Object {
        "callbacks": Object {
          "label": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`Linear/Time charts snapshot test of chartJS configuration for linear chart 1`] = `
Object {
  "background": "#FFFFFF",
  "chartJsConfig": Object {
    "data": Object {
      "datasets": Array [
        Object {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": Array [
            Object {
              "x": "20",
              "y": 10,
            },
            Object {
              "x": "19",
              "y": 11,
            },
            Object {
              "x": "18",
              "y": 12,
            },
            Object {
              "x": "17",
              "y": 13,
            },
          ],
          "fill": false,
          "label": "Series 1",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
      ],
      "labels": Array [
        "20",
        "19",
        "18",
        "17",
      ],
    },
    "options": Object {
      "animation": Object {
        "duration": 0,
      },
      "elements": Object {
        "line": Object {
          "fill": false,
        },
        "point": Object {
          "hitRadius": 15,
        },
      },
      "hover": Object {
        "animationDuration": 10,
      },
      "layout": Object {
        "padding": Object {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": Object {
        "labels": Object {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": Object {
        "xAxes": Array [
          Object {
            "ticks": Object {
              "callback": [Function],
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
            "type": "linear",
          },
        ],
        "yAxes": Array [
          Object {
            "position": "left",
            "ticks": Object {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": Object {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": Object {
        "callbacks": Object {
          "label": [Function],
          "title": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`datasource tests create a chart with stacked bar 1`] = `
Object {
  "background": "#FFFFFF",
  "chartJsConfig": Object {
    "data": Object {
      "datasets": Array [
        Object {
          "backgroundColor": "rgb(31,119,180)",
          "borderColor": "rgb(31,119,180)",
          "data": Array [
            30,
          ],
          "label": "P4",
        },
      ],
      "labels": Array [
        "P4",
      ],
    },
    "options": Object {
      "animation": Object {
        "duration": 0,
      },
      "elements": Object {
        "line": Object {
          "fill": false,
        },
        "point": Object {
          "hitRadius": 15,
        },
      },
      "hover": Object {
        "animationDuration": 10,
      },
      "layout": Object {
        "padding": Object {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": Object {
        "labels": Object {
          "fontColor": "#000000",
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": Object {
        "xAxes": Array [
          Object {
            "stacked": true,
            "ticks": Object {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
          },
        ],
        "yAxes": Array [
          Object {
            "position": "left",
            "stacked": true,
            "ticks": Object {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": Object {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": Object {
        "callbacks": Object {
          "label": [Function],
        },
      },
    },
    "type": "bar",
  },
}
`;

exports[`datasource tests create chart with a dataset of one cell (no title) 1`] = `
Object {
  "background": "#FFFFFF",
  "chartJsConfig": Object {
    "data": Object {
      "datasets": Array [
        Object {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": Array [
            30,
          ],
          "fill": false,
          "label": "Series 1",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
      ],
      "labels": Array [
        "P4",
      ],
    },
    "options": Object {
      "animation": Object {
        "duration": 0,
      },
      "elements": Object {
        "line": Object {
          "fill": false,
        },
        "point": Object {
          "hitRadius": 15,
        },
      },
      "hover": Object {
        "animationDuration": 10,
      },
      "layout": Object {
        "padding": Object {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": Object {
        "labels": Object {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": Object {
        "xAxes": Array [
          Object {
            "ticks": Object {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
          },
        ],
        "yAxes": Array [
          Object {
            "position": "left",
            "ticks": Object {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": Object {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": Object {
        "callbacks": Object {
          "label": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with column datasets 1`] = `
Object {
  "background": "#FFFFFF",
  "chartJsConfig": Object {
    "data": Object {
      "datasets": Array [
        Object {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": Array [
            10,
            11,
            12,
          ],
          "fill": false,
          "label": "first column dataset",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
        Object {
          "backgroundColor": "#FF7F0E",
          "borderColor": "rgb(255,127,14)",
          "data": Array [
            20,
            19,
            18,
          ],
          "fill": false,
          "label": "second column datase…",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(255,127,14)",
        },
      ],
      "labels": Array [
        "P1",
        "P2",
        "P3",
      ],
    },
    "options": Object {
      "animation": Object {
        "duration": 0,
      },
      "elements": Object {
        "line": Object {
          "fill": false,
        },
        "point": Object {
          "hitRadius": 15,
        },
      },
      "hover": Object {
        "animationDuration": 10,
      },
      "layout": Object {
        "padding": Object {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": Object {
        "labels": Object {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": Object {
        "xAxes": Array [
          Object {
            "ticks": Object {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
          },
        ],
        "yAxes": Array [
          Object {
            "position": "left",
            "ticks": Object {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": Object {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": Object {
        "callbacks": Object {
          "label": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with column datasets without series title 1`] = `
Object {
  "background": "#FFFFFF",
  "chartJsConfig": Object {
    "data": Object {
      "datasets": Array [
        Object {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": Array [
            10,
            11,
            12,
          ],
          "fill": false,
          "label": "Series 1",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
        Object {
          "backgroundColor": "#FF7F0E",
          "borderColor": "rgb(255,127,14)",
          "data": Array [
            20,
            19,
            18,
          ],
          "fill": false,
          "label": "Series 2",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(255,127,14)",
        },
      ],
      "labels": Array [
        "P1",
        "P2",
        "P3",
      ],
    },
    "options": Object {
      "animation": Object {
        "duration": 0,
      },
      "elements": Object {
        "line": Object {
          "fill": false,
        },
        "point": Object {
          "hitRadius": 15,
        },
      },
      "hover": Object {
        "animationDuration": 10,
      },
      "layout": Object {
        "padding": Object {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": Object {
        "labels": Object {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": Object {
        "xAxes": Array [
          Object {
            "ticks": Object {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
          },
        ],
        "yAxes": Array [
          Object {
            "position": "left",
            "ticks": Object {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": Object {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": Object {
        "callbacks": Object {
          "label": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with only the dataset title (no data) 1`] = `
Object {
  "background": "#FFFFFF",
  "chartJsConfig": Object {
    "data": Object {
      "datasets": Array [
        Object {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": Array [
            undefined,
            undefined,
            undefined,
          ],
          "fill": false,
          "label": "30",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
      ],
      "labels": Array [
        "P4",
        "P5",
        "P6",
      ],
    },
    "options": Object {
      "animation": Object {
        "duration": 0,
      },
      "elements": Object {
        "line": Object {
          "fill": false,
        },
        "point": Object {
          "hitRadius": 15,
        },
      },
      "hover": Object {
        "animationDuration": 10,
      },
      "layout": Object {
        "padding": Object {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": Object {
        "labels": Object {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": Object {
        "xAxes": Array [
          Object {
            "ticks": Object {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
          },
        ],
        "yAxes": Array [
          Object {
            "position": "left",
            "ticks": Object {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": Object {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": Object {
        "callbacks": Object {
          "label": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with rectangle dataset 1`] = `
Object {
  "background": "#FFFFFF",
  "chartJsConfig": Object {
    "data": Object {
      "datasets": Array [
        Object {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": Array [
            10,
            11,
            12,
          ],
          "fill": false,
          "label": "first column dataset",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
        Object {
          "backgroundColor": "#FF7F0E",
          "borderColor": "rgb(255,127,14)",
          "data": Array [
            20,
            19,
            18,
          ],
          "fill": false,
          "label": "second column datase…",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(255,127,14)",
        },
      ],
      "labels": Array [
        "P1",
        "P2",
        "P3",
      ],
    },
    "options": Object {
      "animation": Object {
        "duration": 0,
      },
      "elements": Object {
        "line": Object {
          "fill": false,
        },
        "point": Object {
          "hitRadius": 15,
        },
      },
      "hover": Object {
        "animationDuration": 10,
      },
      "layout": Object {
        "padding": Object {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": Object {
        "labels": Object {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": Object {
        "xAxes": Array [
          Object {
            "ticks": Object {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
          },
        ],
        "yAxes": Array [
          Object {
            "position": "left",
            "ticks": Object {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": Object {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": Object {
        "callbacks": Object {
          "label": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with row datasets 1`] = `
Object {
  "background": "#FFFFFF",
  "chartJsConfig": Object {
    "data": Object {
      "datasets": Array [
        Object {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": Array [
            30,
            31,
            32,
          ],
          "fill": false,
          "label": "first row dataset",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
        Object {
          "backgroundColor": "#FF7F0E",
          "borderColor": "rgb(255,127,14)",
          "data": Array [
            40,
            41,
            42,
          ],
          "fill": false,
          "label": "second row dataset",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(255,127,14)",
        },
      ],
      "labels": Array [
        "P4",
        "P5",
        "P6",
      ],
    },
    "options": Object {
      "animation": Object {
        "duration": 0,
      },
      "elements": Object {
        "line": Object {
          "fill": false,
        },
        "point": Object {
          "hitRadius": 15,
        },
      },
      "hover": Object {
        "animationDuration": 10,
      },
      "layout": Object {
        "padding": Object {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": Object {
        "labels": Object {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": Object {
        "xAxes": Array [
          Object {
            "ticks": Object {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
          },
        ],
        "yAxes": Array [
          Object {
            "position": "left",
            "ticks": Object {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": Object {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": Object {
        "callbacks": Object {
          "label": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with row datasets without series title 1`] = `
Object {
  "background": "#FFFFFF",
  "chartJsConfig": Object {
    "data": Object {
      "datasets": Array [
        Object {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": Array [
            30,
            31,
            32,
          ],
          "fill": false,
          "label": "Series 1",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
        Object {
          "backgroundColor": "#FF7F0E",
          "borderColor": "rgb(255,127,14)",
          "data": Array [
            40,
            41,
            42,
          ],
          "fill": false,
          "label": "Series 2",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(255,127,14)",
        },
      ],
      "labels": Array [
        "P4",
        "P5",
        "P6",
      ],
    },
    "options": Object {
      "animation": Object {
        "duration": 0,
      },
      "elements": Object {
        "line": Object {
          "fill": false,
        },
        "point": Object {
          "hitRadius": 15,
        },
      },
      "hover": Object {
        "animationDuration": 10,
      },
      "layout": Object {
        "padding": Object {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": Object {
        "labels": Object {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": Object {
        "xAxes": Array [
          Object {
            "ticks": Object {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
          },
        ],
        "yAxes": Array [
          Object {
            "position": "left",
            "ticks": Object {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": Object {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": Object {
        "callbacks": Object {
          "label": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;
